LLoan emi calculator

--- a/test/.classpath
+++ b/test/.classpath
@@ -12,5 +12,6 @@
 	<classpathentry kind="lib" path="C:/Users/elavarasan.natarajan/Downloads/com.fasterxml.jackson.annotations.jar/com.fasterxml.jackson.annotations.jar"/>
 	<classpathentry kind="lib" path="C:/Users/elavarasan.natarajan/Downloads/apache-commons-lang.jar/apache-commons-lang.jar"/>
 	<classpathentry kind="lib" path="D:/softwares/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/elavarasan.natarajan/Downloads/acm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
